<resources>
    <string name="app_name">Add Remove User</string>
    <string name="title">title</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="deleted_users">Deleted: </string>
    <string name="active_users">Active: </string>
    <string name="success">Success</string>
    <string name="error">Error</string>
</resources>