<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/first_bg"
    tools:context=".RemoveUpdateActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/ed_corner"
        android:hint="@string/first_name"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ed_corner"
        android:hint="@string/last_name"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edFirstName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ed_corner"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="2"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/age"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edLastName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ed_corner"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAge" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/btnRemoveUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemoveUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>